# django-admin-registrar

./: .gitignore  LICENSE.txt  TODO.txt  pyproject.toml  registrator.py
admin_registrar/: __init__.py  admin.py  conf.py  logging.py  registrars.py  resolvers.py  types.py
admin_registrar/_utils/: colors.py
admin_registrar/utils/: reflection.py
admin_registrator/: __init__.py  registrator.py
admin_registrator/utils/: __init__.py
