[project]
name = "django-admin-registrar"
version = "v0.1.0.dev1+2602201000" #<major>.<minor>.<patch>.dev+YYMMDDHHMM
description = "Python Django package for convenient registration of models in the admin area without a boilerplate in a declarative style."
authors = [
	{ name = "SpyDev14", email = "135313844+SpyDev14@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	'django',
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
	"Environment :: Web Environment",
	"Framework :: Django",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Development Status :: 4 - Beta", #5 - Production/Stable",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
	"Topic :: Internet :: WWW/HTTP :: WSGI",
	"Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/SpyDev14/django-admin-registrar"
Issues = "https://github.com/SpyDev14/django-admin-registrar/issues"

[project.optional-dependencies]
colorama = [ 'colorama', ]

[tool.poetry]
packages = [
	{ include = "admin_registrar", from = "." }
]

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
